<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchfield" />

    <LinearLayout
        android:id="@+id/buttons_bar"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gallaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galButton1text" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapButton2text" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <TableLayout android:id="@+id/gImages"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:stretchColumns="1,3"
            xmlns:card_view="http://schemas.android.com/apk/res-auto">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pre_search_images"
                    android:textSize="24sp" />

            <!--<include layout="@layout/matterial_card_test"/>-->

        </TableLayout>
    </ScrollView>
</LinearLayout>
