<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:padding="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/searchfield" />

    <LinearLayout
        android:id="@+id/buttons_bar"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gallaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1text" />


        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapButton2text" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MapsActivity" >

        <Button
            android:id="@+id/mapbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="show"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:paddingRight="10dp"/>

    </fragment>

    <HorizontalScrollView
        android:id="@+id/scroll_View"
        android:layout_width="fill_parent"
        android:layout_height="300dp">

        <LinearLayout
            android:id="@+id/images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/pre_search_images"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"
                android:textSize="24dp" />

            <!-- <include layout="@layout/matterial_card_test"/> -->

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>